--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
   
 body {
   margin: 0;
-  padding: 0;
-  text-align: center;
+  margin-left: 20px;
+  padding: 0 0 0 15;
   font-family: 'Roboto', sans-serif;
   color: #222;
   background: #f7f5f0;
@@ -57,7 +57,7 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/portland.jpg') no-repeat top center ;
+  background: url('images/Background.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
@@ -204,4 +204,7 @@ a.social:hover {
   }
 
 }
-
+.experience {
+  background: url('images/cell-phone-1.png') no-repeat top right;
+  background-size: 50%;
+}
