--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ hr {
 
 header {
   text-align: center;
-  background: url('images/Background.jpg') no-repeat top center;
+  background: url('images/new_background.jpg') no-repeat top center;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
